compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_could_not_unify9.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn main() { let assert [1, 2, ..x]: List<String> = [1,2,3] x }"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:52
  │
1 │ fn main() { let assert [1, 2, ..x]: List<String> = [1,2,3] x }
  │                                                    ^^^^^^^

Expected type:

    List<String>

Found type:

    List<Int>
